--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <body>
     <div id="title">
       <img src="dist/img/iota-offline-icon.png">
-      <span>IOTA Offline</span>
+      <span id="titleText">IOTA Offline</span>
+      <span id="version">v1.20180924.1015</span>
     </div>
 
     <div class="actionArea">
